--- a/src/mobileNavBae.css
+++ b/src/mobileNavBae.css
@@ -95,13 +95,14 @@
 
 #menu
 {
+  overflow-y: scroll;
   position: absolute;
   width: 90%;
-  height: 100vh;
+  height: 110vh;
   box-shadow: 0 0 10px #85888C;
   margin: -50px 0 0 -50px;
   padding: 50px;
-  padding-top: 125px;
+  padding-top: 50px;
   background-color: #F5F6FA;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
