--- a/src/App.scss
+++ b/src/App.scss
@@ -423,7 +423,6 @@ html {
 
 .partners-wrapper{
     width: 100vw;
-    height: 280px;
     margin-top: 50px;
     background-color: rgb(224, 224, 224);
     box-sizing: border-box;
@@ -961,42 +960,67 @@ html {
 
 .mobile-menu{
     .navbar-link{
+        display: block;
         font-size: 20px;
         font-family: 'Merriweather', serif;
-        color: #000;
+        color: #fff;
+        text-align: left;
+        line-height: 50px;
         &::after{
-            background-color: #000;
+            background-color: transparent;
         }
+    }
+    .navbar-arrow{
+        width: 10px;
+        height: 15px;
+        position: relative;
+        display: block;
+    }
+    .rotated{
+        transform: rotate(90deg);
+    }
+    .with-arrow{
+        background-color: #a98258;
+        border-radius: 25px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+        padding-right: 20px;
+        justify-content: space-between;
     }
     .mobile-drop-list{
         margin-top: 10px;
         margin-left: 70px;
     }
     .profile{
+        height: 100%;
         margin: auto;
     }
     .login{
+        height: 100%;
         display: block;
         padding: 0;
     }
     .hidden{
+        height: 0;
         display: none;
     }
     .sign-in, .sign-up{
-        margin: auto;
         margin-top: 0;
         width: 100px;
         font-size: 20px;
         font-family: 'Merriweather', serif;
-        color: #000;
+        color: rgb(255, 255, 255);
     }
     .sign-in::after, .sign-up::after {
-        background-color: hsl(0, 0%, 0%);
+        background-color: transparent;
     }
     .profile{
         border: none;
     }
     .profile-wrapper{
+        margin-left: -35px;
         width: 200px;
     }
     .profile-info{
@@ -1004,11 +1028,15 @@ html {
     }
     .nickname{
         font-family: 'Merriweather', serif;
-        color: #000;
+        color: rgb(255, 255, 255);
     }
     .sharing{
-        width: 70%;
-        margin: auto;
+        width: 100%;
+        margin-top: 40px;
+    }
+    .noHight{
+        height: 0;
+        overflow: hidden;
     }
 }
 
@@ -1114,43 +1142,12 @@ html {
 
 
 @media screen and (max-width: 1200px) {
-    .navbar{
-        display: none;
-    }
     .title{
         margin-top: 30vh;
         font-size: 80px;
-        margin-top: 80px;
-    }
-    .mobile-navbar{
-        display: block;
     }
     .car-list{
         grid-template-columns: 1fr 1fr;
-    }
-    .wrapper{
-        display: grid;
-        width: 100%;
-        grid-template: "head"
-                        "left"
-                       "main"
-                       "content";
-    }
-    .conditions-wrapper{
-        width: 100vw;
-        height: 100vh;
-    }
-    .filter{
-        width: 90vw;
-    }
-    .sidebar{
-        position: relative;
-        width: 100%;
-        height: 500px;
-        margin-bottom: 100px;
-        grid-area: left;
-        overflow-y: scroll;
-        overflow-x:hidden;
     }
     .popup-login{
         width: 30vw;
@@ -1168,8 +1165,38 @@ html {
 }
 
 @media screen and (max-width: 1000px) {
+    .navbar{
+        display: none;
+    }
+    .mobile-navbar{
+        display: block;
+    }
     .title{
         font-size: 70px;
+    }
+    .conditions-wrapper{
+        width: 100vw;
+        height: 100vh;
+    }
+    .filter{
+        width: 90vw;
+    }
+    .sidebar{
+        position: relative;
+        width: 100%;
+        height: 500px;
+        margin-bottom: 100px;
+        grid-area: left;
+        overflow-y: scroll;
+        overflow-x:hidden;
+    }
+    .wrapper{
+        display: grid;
+        width: 100%;
+        grid-template: "head"
+                        "left"
+                       "main"
+                       "content";
     }
 }
 
