--- a/src/mobileNavBae.css
+++ b/src/mobileNavBae.css
@@ -80,7 +80,7 @@
 {
   opacity: 1;
   transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383F;
+  background: #ffffff;
 }
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
@@ -97,13 +97,13 @@
 {
   overflow-y: scroll;
   position: absolute;
-  width: 90%;
-  height: 110vh;
+  width: 100vw;
+  height: 100vh;
   box-shadow: 0 0 10px #85888C;
   margin: -50px 0 0 -50px;
   padding: 50px;
-  padding-top: 50px;
-  background-color: #F5F6FA;
+  padding-top: 100px;
+  background-color: #292d35;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
