--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('./normalize.css');
+@import url('./loader.css');
+@import url('./mobileNavBae.css');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goblin+One&display=swap');
+
+html {
+  scroll-behavior:smooth
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
